# powershell

./: .gitignore  README.md  plex_migration_gui.ps1
plex-toolkit/: .gitignore  LICENSE  README.md  build.py  plex_toolkit.py  pyproject.toml  requirements.txt  setup.py
plex-toolkit/.github/workflows/: build.yml
plex-toolkit/assets/: .gitkeep
plex-toolkit/src/: __init__.py
plex-toolkit/src/cli/: __init__.py  main.py
plex-toolkit/src/core/: __init__.py  backup.py  compression.py  database.py  migration.py  network.py  platform.py  plex_paths.py  preferences.py
plex-toolkit/src/gui/: __init__.py  main_window.py
